<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context=".views.auth.AuthenticationActivity">

        <TextView
            android:visibility="gone"
            android:id="@+id/signin_info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="12dp"
            android:gravity="start"
            android:text="@string/general_enter_your_details_below"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/profile_user_first_name_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:padding="10dp" />


            <EditText
                android:id="@+id/profile_user_last_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:padding="10dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/profile_phone_number_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/general_phone_number"
            android:inputType="phone"
            android:padding="10dp" />

        <com.spothero.emailvalidator.EmailValidationEditText
            android:id="@+id/profile_email_address_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/general_email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/profile_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/general_password"
            android:inputType="textPassword"
            android:padding="10dp" />


        <ProgressBar
            android:id="@+id/profile_information_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:visibility="gone" />

        <Button
            android:layout_marginTop="12dp"
            android:id="@+id/register_button"
            android:background="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/general_sign_up_button"
            android:textColor="#fff"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

</ScrollView>
