<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context=".views.auth.AuthenticationActivity">

        <TextView
            android:id="@+id/signin_info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:text="Signin to proceed"
            android:layout_marginBottom="12dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/profile_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/general_email_address"
            android:inputType="number"
            android:padding="10dp" />


        <EditText
            android:id="@+id/profile_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/general_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <ProgressBar
            android:id="@+id/sign_in_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/black"
            android:text="@string/general_sign_in"
            android:textColor="#fff"
            android:textStyle="bold"
            android:visibility="visible" />


    </LinearLayout>

</ScrollView>
